Mount /tank read-only

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,7 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - data:/var/lib/stash
-      - /tank:/tank
+      - /tank:/tank:ro
 
 volumes:
   data:
-
