--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,6 @@ services:
       STASH_PORT: 9999
     volumes:
       - /etc/localtime:/etc/localtime:ro
-      - data:/var/lib/stash
+      - /tank/docker/stash:/var/lib/stash
       - /tank:/tank:ro
       - /home/joe/photos:/home/joe/photos:ro
-
-volumes:
-  data:
