--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,5 +16,6 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /tank/containers/stash:/var/lib/stash
-      - /tank/media/xxx:/tank/media/xxx
-      - /home/joe/photos:/home/joe/photos
+      - /tank/media/xxx/photos:/tank/media/xxx/photos
+      - /tank/media/xxx/videos:/tank/media/xxx/videos
+      - /tank/media/xxx/private/photos:/tank/media/xxx/private/photos
